provision different operating systems in the "vagrant up" phase

--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -7,3 +7,33 @@
   roles:
     - loghost
 
+- name: bootstrap ubuntu hosts
+  hosts: ubuntu
+  gather_facts: True
+  sudo: yes
+
+  roles:
+    - geerlingguy.java
+
+- name: bootstrap fedora hosts
+  hosts: fedora21
+  gather_facts: True
+  sudo: yes
+
+  tasks:
+     include: tasks/install_docker.yml
+
+- name: bootstrap coreos hosts
+  hosts: coreos
+  gather_facts: False
+
+  roles:
+    - defunctzombie.coreos-bootstrap
+
+- name: bootstrap rancheros hosts
+  hosts: rancheros
+  gather_facts: False
+  sudo: yes
+
+  tasks:
+     include: tasks/bootstrap_rancheros.yml
