--- a/ansible/ansible.ini
+++ b/ansible/ansible.ini
@@ -1,18 +1,21 @@
 [local]
 localhost ansible_connection=local
 
+[windows_7]
+windows_7 ansible_ssh_host=127.0.0.1 ansible_ssh_host=2200 ansible_ssh_user=ranger
+
 [centos6]
 centos6 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2001 ansible_ssh_user=vagrant
-
-[coreos]
-coreos ansible_ssh_host=127.0.0.1 ansible_ssh_port=2200 ansible_ssh_user=core
-
-[fedora]
-fedora21 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2204 ansible_ssh_user=vagrant
 
 [ubuntu]
 ubuntu14 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2202 ansible_ssh_user=vagrant
 
+[fedora]
+fedora21 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2203 ansible_ssh_user=vagrant
+
+[coreos]
+coreos ansible_ssh_host=127.0.0.1 ansible_ssh_port=2204 ansible_ssh_user=core
+
 [rancheros]
-rancheros ansible_ssh_host=127.0.0.1 ansible_ssh_host=2203 ansible_ssh_user=ranger
+rancheros ansible_ssh_host=127.0.0.1 ansible_ssh_host=2205 ansible_ssh_user=ranger
 
