--- a/kickstart/centos-6.6-x86_64-noX.cfg
+++ b/kickstart/centos-6.6-x86_64-noX.cfg
@@ -40,6 +40,7 @@ firewall --enabled --service=ssh
 selinux --permissive
 ## Add some repos for build additional packages
 repo --name=epel --mirrorlist=https://mirrors.fedoraproject.org/metalink?repo=epel-6&arch=x86_64 --includepkgs='dkms,tmux'
+repo --name=updates --baseurl=https://www.mirrorservice.org/sites/mirror.centos.org/6/updates/x86_64/
 
 %packages --ignoremissing
 @Base
