--- a/ansible/ansible.ini
+++ b/ansible/ansible.ini
@@ -1,3 +1,11 @@
+# This is an ansible inventory for Packer & Vagrant
+#
+#   - Comments begin with the '#' character
+#   - Blank lines are ignored
+#   - Groups of hosts are delimited by [header] elements
+#   - You can enter hostnames or ip addresses
+#   - A hostname/ip can be a member of multiple groups
+
 [local]
 localhost ansible_connection=local
 
