--- a/ansible/packer.yml
+++ b/ansible/packer.yml
@@ -1,6 +1,6 @@
 ---
 # This playbook is run from packer during kickstart (phase 1)
-- hosts: all
+- hosts: 127.0.0.1
   user: vagrant
   sudo: yes
 
