--- a/ansible/inventory/ansible.ini
+++ b/ansible/inventory/ansible.ini
@@ -9,8 +9,8 @@
 [local]
 localhost ansible_connection=local
 
-[windows_7]
-windows_7 ansible_ssh_host=127.0.0.1 ansible_ssh_host=2200 ansible_ssh_user=ranger
+[windows]
+windows 
 
 [centos6]
 centos6 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2201 ansible_ssh_user=vagrant
