not audting during packer build

--- a/kickstart/centos-6.6-x86_64-noX.cfg
+++ b/kickstart/centos-6.6-x86_64-noX.cfg
@@ -13,7 +13,7 @@ install
 url --url=http://www.mirrorservice.org/sites/mirror.centos.org/6/os/x86_64/
 
 ## Disk Partitioning
-bootloader --location=mbr --append="audit=1"
+bootloader --location=mbr 
 zerombr
 clearpart --all --initlabel
 part  /boot     --asprimary  --size=256         --ondrive=sda
