formatting of kali preseed.cfg

--- a/kickstart/preseed.cfg
+++ b/kickstart/preseed.cfg
@@ -30,13 +30,6 @@ d-i partman/confirm_write_new_label boolean true
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
 
-# Add our own security mirror 
-d-i apt-setup/local0/repository string http://archive.kali.org/kali-security
-kali/updates main 
-d-i apt-setup/local0/comment string Security updates 
-d-i apt-setup/local0/source boolean false 
-d-i apt-setup/use_mirror boolean true
-
 # Upgrade installed packages
 tasksel tasksel/first multiselect standard 
 d-i pkgsel/upgrade select full-upgrade 
@@ -45,7 +38,7 @@ d-i pkgsel/upgrade select full-upgrade
 d-i pkgsel/include string openssh-server ntpupdate nmap tcpdump
 
 # Change default hostname 
-d-i netcfg/get_hostname string vagrant-kali-109
+d-i netcfg/get_hostname string kali
 d-i netcfg/get_domain string local.lan 
 d-i netcfg/hostname string kali 
 
