--- a/kickstart/kali.cfg
+++ b/kickstart/kali.cfg
@@ -1,16 +1,21 @@
+d-i debian-installer/splash boolean false
 d-i debian-installer/locale string en_US 
 d-i console-keymaps-at/keymap select us 
-d-i mirror/country string United States 
+
+d-i clock-setup/utc boolean true
+d-i time/zone string Europe/Amsterdam
+d-i clock-setup/ntp boolean true
+
+d-i mirror/country string Netherlands
 d-i mirror/suite string kali 
 d-i mirror/codename string kali 
 d-i mirror/http/hostname string archive.kali.org 
 d-i mirror/http/directory string /kali 
 d-i mirror/http/proxy string 
-d-i clock-setup/utc boolean true 
-d-i time/zone string US/Eastern
 
 # Disable volatile and security 
 d-i apt-setup/services-select multiselect 
+d-i apt-setup/use_mirror boolean false
 
 # Enable contrib and non-free
 d-i apt-setup/non-free boolean true 
@@ -32,10 +37,13 @@ d-i partman/confirm_nooverwrite boolean true
 
 # Upgrade installed packages
 tasksel tasksel/first multiselect standard 
+# Install a limited subset of tools from the Kali Linux repositories 
+d-i pkgsel/include string openssh-server sudo python python-simplejson python-apt python-pycurl openvas metasploit-framework metasploit ntpupdate nmap
+d-i base-installer/install-recommends boolean false
+d-i pkgsel/install-language-support boolean false
+d-i pkgsel/update-policy select unattended-upgrades
 d-i pkgsel/upgrade select full-upgrade 
 
-# Install a limited subset of tools from the Kali Linux repositories 
-d-i pkgsel/include string openssh-server ntpupdate nmap tcpdump
 
 # Change default hostname 
 d-i netcfg/get_hostname string kali
@@ -59,8 +67,11 @@ d-i passwd/user-default-groups string audio cdrom video admin sudo
 popularity-contest popularity-contest/participate boolean false
 d-i grub-installer/only_debian boolean true 
 d-i grub-installer/with_other_os boolean false 
-d-i finish-install/reboot_in_progress note
 
 # start ssh on boot
 d-i preseed/late_command string in-target update-rc.d ssh enable
+
+d-i finish-install/reboot_in_progress note
+
+
 
