--- a/ansible/inventory/ansible.ini
+++ b/ansible/inventory/ansible.ini
@@ -10,7 +10,7 @@
 localhost ansible_connection=local
 
 [windows]
-windows 
+windows ansible_connection=winrm ansible_ssh_host=127.0.0.1 ansible_ssh_port=5985  ansible_ssh_user=vagrant
 
 [centos6]
 centos6 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2201 ansible_ssh_user=vagrant
