local python interpreter for Fedora

--- a/ansible/inventory/ansible.ini
+++ b/ansible/inventory/ansible.ini
@@ -7,7 +7,7 @@
 #   - A hostname/ip can be a member of multiple groups
 
 [local]
-localhost ansible_connection=local
+localhost ansible_connection=local ansible_python_interpreter=python2
 
 [windows]
 windows ansible_connection=winrm ansible_ssh_host=127.0.0.1 ansible_ssh_port=5985  ansible_ssh_user=vagrant
