RHEL-STIG re-enabled in provision

--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -16,10 +16,9 @@
     - loghost
     - { role: RHEL6-STIG, rhel6stig_cat2: true, rhel6stig_cat3: true, rhel6stig_is_mail_relay: true }
     - issue
-    - geerlingguy.java
-    - pcextreme.mariadb
 
   tasks:
+    - include: tasks/install_docker.yml
     - include: tasks/dockpack.yml
 
 ### Ubuntu
