--- a/kickstart/fedora-22-x86_64-noX.cfg
+++ b/kickstart/fedora-22-x86_64-noX.cfg
@@ -1,15 +1,16 @@
 # Locale
 lang en_US.UTF-8
 keyboard us
-timezone UTC
-
-# Authentication
-authconfig --enableshadow --enablemd5
 rootpw --iscrypted $1$2JddEFL0$Wf3pzKYr3uRPZwoZHWb4f0
+auth --enableshadow --enablemd5
+timezone UTC
 
 # Kickstart
 install
-
+cdrom
+network --bootproto dhcp --hostname=vagrant
+firewall --enabled --service=ssh
+selinux --permissive
 ## Disk Partitioning
 bootloader --location=mbr --append="audit=1"
 zerombr
@@ -25,19 +26,16 @@ part  swap                   --size=512         --ondrive=sda
 
 ## Firstboot - the druid that helps you to set up the system after install - disabled
 firstboot --disabled
+
+user --name=vagrant --groups=vagrant --password=vagrant --plaintext
+services --enabled=network
 ## Don't use GUI
 text
 ## Don't configure X
 skipx
 ## Reboot the machine after the install
 reboot
-
-network --bootproto dhcp --hostname=vagrant
-firewall --enabled --service=ssh
-
-selinux --permissive
-## Add some repos for build additional packages
-repo --name=epel --mirrorlist=https://mirrors.fedoraproject.org/metalink?repo=epel-6&arch=x86_64 --includepkgs='dkms,tmux'
+url --mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=fedora-$releasever&arch=$basearch
 
 %packages --ignoremissing
 @Base
@@ -45,6 +43,8 @@ repo --name=epel --mirrorlist=https://mirrors.fedoraproject.org/metalink?repo=ep
 wget
 curl
 sudo
+dhcp-client
+which
 vim
 gcc
 gcc-c++
@@ -60,10 +60,12 @@ fprintd-pam
 gnutls
 bzip2
 p7zip
+python-setuptools
 git
 rsync
 screen
 xfsprogs
+yum-utils
 
 ## Remove unnecessary packages
 -abrt
@@ -91,6 +93,7 @@ xfsprogs
 -gdk-pixbuf2
 -gpm-libs
 -hdparm
+-iprutils
 -ipw*-firmware
 -irqbalance
 -ivtv-firmware
@@ -105,11 +108,13 @@ xfsprogs
 -mlocate
 -mtr
 -nano
+-NetworkManager
 -ntsysv
 -parted
 -pcmciautils
 -pciutils
 -pinfo
+-plymouth
 -ppl
 -python-iwlib
 -ql*-firmware
@@ -141,25 +146,28 @@ xfsprogs
 %end
 
 %post
-/usr/bin/yum -y upgrade
+#dnf -y update
 
-# lazy postinstall method - run postinstall scripts later
-# create vagrant user and group
-/usr/sbin/groupadd vagrant -g 999
-/usr/sbin/useradd vagrant -g vagrant -u 999 -G wheel -d /home/vagrant -c "vagrant"
-# set password
-echo "vagrant" | passwd --stdin vagrant
-
-# give sudo access (grants all permissions to user vagrant)
-echo "vagrant ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/vagrant
-chmod 0440 /etc/sudoers.d/vagrant
-# for vagrant halt etc.
-sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
-
+cat <<EOF > /etc/sudoers.d/vagrant
+Defaults:vagrant !requiretty
+vagrant ALL=(ALL) NOPASSWD: ALL
+EOF
+chmod 440 /etc/sudoers.d/vagrant
 # add vagrant's public key - user can ssh without password
 mkdir -pm 700 ~vagrant/.ssh
 wget -O ~vagrant/.ssh/authorized_keys --no-check-certificate https://raw.github.com/mitchellh/vagrant/master/keys/vagrant.pub
 chmod 0600 ~vagrant/.ssh/authorized_keys
 chown -R vagrant:vagrant ~vagrant/.ssh
+
+
+
+mkdir -p /etc/systemd/network
+ln -sf /dev/null /etc/systemd/network/99-default.link
+cat > /etc/sysconfig/network-scripts/ifcfg-eth0 <<EOF
+DEVICE="eth0"
+BOOTPROTO="dhcp"
+ONBOOT="yes"
+TYPE="Ethernet"
+EOF
 
 %end
