upgrading in box

--- a/kickstart/fedora-22-x86_64-noX.cfg
+++ b/kickstart/fedora-22-x86_64-noX.cfg
@@ -146,7 +146,7 @@ yum-utils
 %end
 
 %post
-#dnf -y update
+dnf -y update
 
 cat <<EOF > /etc/sudoers.d/vagrant
 Defaults:vagrant !requiretty
@@ -158,8 +158,6 @@ mkdir -pm 700 ~vagrant/.ssh
 wget -O ~vagrant/.ssh/authorized_keys --no-check-certificate https://raw.github.com/mitchellh/vagrant/master/keys/vagrant.pub
 chmod 0600 ~vagrant/.ssh/authorized_keys
 chown -R vagrant:vagrant ~vagrant/.ssh
-
-
 
 mkdir -p /etc/systemd/network
 ln -sf /dev/null /etc/systemd/network/99-default.link
