provisioning container with ansible

--- a/docker/tomcat/Makefile
+++ b/docker/tomcat/Makefile
@@ -6,10 +6,11 @@ VERSION=7
 all: build
 
 build:
+	(cd ansible && ansible-galaxy install --force -r requirements.yml)
 	docker build -t $(AUTHOR)/$(NAME):$(VERSION) .
 
 bash:
-    docker run -ti $(AUTHOR)/$(NAME):$(VERSION) /bin/bash
+	docker run -ti $(AUTHOR)/$(NAME):$(VERSION) /bin/bash
 
 run:
 	docker run -d -p 8080:8080 $(AUTHOR)/$(NAME):$(VERSION)
