--- a/kickstart/centos-7.1-x86_64-noX.cfg
+++ b/kickstart/centos-7.1-x86_64-noX.cfg
@@ -16,27 +16,23 @@ bootloader --location=mbr
 zerombr
 clearpart --all --initlabel
 part /boot    --size 500      --asprimary
-part pv.01     --size 1        --grow
+part pv.01    --size 1        --grow
 
 volgroup systemvg pv.01
 logvol swap      --fstype swap 	--name=swaplv     --vgname=systemvg --size=2048
 logvol /tmp      --fstype xfs 	--name=tmplv      --vgname=systemvg --size=2048
-logvol /var      --fstype xfs 	--name=varlv      --vgname=systemvg --size=6144
+logvol /var      --fstype xfs 	--name=varlv      --vgname=systemvg --size=6144 --grow
 logvol /var/core --fstype xfs 	--name=varcorelv  --vgname=systemvg --size=1024
 logvol /var/log  --fstype xfs	--name=varloglv   --vgname=systemvg --size=6144
 logvol /home     --fstype xfs 	--name=homelv     --vgname=systemvg --size=1024
-logvol /         --fstype xfs 	--name=rootlv     --vgname=systemvg --size=10240 --grow
+logvol /         --fstype xfs 	--name=rootlv     --vgname=systemvg --size=10240
 # Run the Setup Agent on first boot
 firstboot --disable
 
 # Network information
-
-
-
-
 network  --bootproto=dhcp --ipv6=auto --activate --hostname=localhost.localdomain
 firewall --disabled
-
+selinux --permissive
 # Reboot the machine after successful installation
 reboot --eject
 
@@ -47,14 +43,22 @@ osad
 make
 perl
 wget
+bzip2
 
+# for guest additions, removed later
+gcc
+cpp
+libstdc++-devel
+kernel-devel
+kernel-headers
 
 ## Remove unnecessary packages
 -gtk2
 -libX11
 -hicolor-icon-theme
 -avahi
--freetype
+-avahi-libs
+-avahi-autoipd
 -bitstream-vera-fonts
 -iwl6000g2a-firmware
 -iwl5000-firmware
@@ -84,24 +88,8 @@ wget
 %end
 
 %post
-echo "vagrant"|passwd --stdin root
-
-# create vagrant user and group
-/usr/sbin/groupadd vagrant -g 999
-/usr/sbin/useradd vagrant -g vagrant -u 999 -G wheel -d /home/vagrant -c "vagrant"
-# set password
-echo "vagrant" | passwd --stdin vagrant
-
-# give sudo access (grants all permissions to user vagrant)
-echo "vagrant ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/vagrant
-chmod 0440 /etc/sudoers.d/vagrant
+sed -i 's/rhgb quiet//' /etc/grub.conf
 # for vagrant halt etc.
 sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
-echo vagrant
-# add vagrant's public key - user can ssh without password
-mkdir -pm 700 ~vagrant/.ssh
-wget -O ~vagrant/.ssh/authorized_keys --no-check-certificate https://raw.github.com/mitchellh/vagrant/master/keys/vagrant.pub
-chmod 0600 ~vagrant/.ssh/authorized_keys
-chown -R vagrant:vagrant ~vagrant/.ssh
-sed -i 's/rhgb quiet//' /etc/grub.conf
+
 %end
