vagrant provisioning for centos7

--- a/ansible/inventory/ansible.ini
+++ b/ansible/inventory/ansible.ini
@@ -23,3 +23,6 @@ fedora22 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2203 ansible_ssh_user=vagra
 
 [coreos]
 coreos ansible_ssh_host=127.0.0.1 ansible_ssh_port=2204 ansible_ssh_user=core
+
+[centos7]
+centos7 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2207 ansible_ssh_user=vagrant
