--- a/kickstart/centos-7.1-x86_64-noX.cfg
+++ b/kickstart/centos-7.1-x86_64-noX.cfg
@@ -39,10 +39,9 @@ reboot --eject
 %packages --ignoremissing
 @core
 sudo
-osad
 make
-perl
 wget
+net-tools
 bzip2
 
 # for guest additions, removed later
@@ -88,6 +87,7 @@ kernel-headers
 %end
 
 %post
+/usr/bin/yum -y upgrade
 sed -i 's/rhgb quiet//' /etc/grub.conf
 # for vagrant halt etc.
 sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
