--- a/kickstart/centos-7.1-x86_64-noX.cfg
+++ b/kickstart/centos-7.1-x86_64-noX.cfg
@@ -23,7 +23,7 @@ logvol swap      --fstype swap 	--name=swaplv     --vgname=systemvg --size=2048
 logvol /tmp      --fstype xfs 	--name=tmplv      --vgname=systemvg --size=2048
 logvol /var      --fstype xfs 	--name=varlv      --vgname=systemvg --size=6144 --grow
 logvol /var/core --fstype xfs 	--name=varcorelv  --vgname=systemvg --size=1024
-logvol /var/log  --fstype xfs	--name=varloglv   --vgname=systemvg --size=6144
+logvol /var/log  --fstype xfs	  --name=varloglv   --vgname=systemvg --size=6144
 logvol /home     --fstype xfs 	--name=homelv     --vgname=systemvg --size=1024
 logvol /         --fstype xfs 	--name=rootlv     --vgname=systemvg --size=10240
 # Run the Setup Agent on first boot
@@ -43,6 +43,7 @@ make
 wget
 net-tools
 bzip2
+yum-utils
 
 # for guest additions, removed later
 gcc
@@ -52,6 +53,7 @@ kernel-devel
 kernel-headers
 
 ## Remove unnecessary packages
+-perl
 -gtk2
 -libX11
 -hicolor-icon-theme
@@ -84,10 +86,15 @@ kernel-headers
 -iwl6000g2b-firmware
 -iwl6050-firmware
 -iwl7260-firmware
+-libmpc
+-libsysfs
+-mpfr
+-rdma
 %end
 
 %post
 /usr/bin/yum -y upgrade
+package-cleanup --oldkernels --count=1yum in
 sed -i 's/rhgb quiet//' /etc/grub.conf
 # for vagrant halt etc.
 sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
