--- a/kickstart/centos-7.1-x86_64-noX.cfg
+++ b/kickstart/centos-7.1-x86_64-noX.cfg
@@ -24,7 +24,7 @@ logvol /tmp      --fstype xfs 	--name=tmplv      --vgname=systemvg --size=2048
 logvol /var      --fstype xfs 	--name=varlv      --vgname=systemvg --size=6144 --grow
 logvol /var/core --fstype xfs 	--name=varcorelv  --vgname=systemvg --size=1024
 logvol /var/log  --fstype xfs	  --name=varloglv   --vgname=systemvg --size=6144
-logvol /home     --fstype xfs 	--name=homelv     --vgname=systemvg --size=1024
+logvol /home     --fstype xfs 	--name=homelv     --vgname=systemvg --size=10240 --grow
 logvol /         --fstype xfs 	--name=rootlv     --vgname=systemvg --size=10240
 # Run the Setup Agent on first boot
 firstboot --disable
@@ -53,7 +53,6 @@ kernel-devel
 kernel-headers
 
 ## Remove unnecessary packages
--perl
 -gtk2
 -libX11
 -hicolor-icon-theme
