--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -15,17 +15,11 @@
 
   vars_files:
     - "group_vars/centos6"
-  pre_tasks:
-    - include: roles/bbaassssiiee.commoncentos/tasks/stig.yml
 
-  roles:
-    - bbaassssiiee.commoncentos
-    - loghost
-    - { role: RHEL6-STIG, rhel6stig_cat2: true, rhel6stig_cat3: true, rhel6stig_is_mail_relay: true }
-    - issue
+  roles: 
+    - workshop
+ 
 
-  tasks:
-    - include: tasks/dockpack.yml
 
 ### Ubuntu
 - name: bootstrap ubuntu hosts
@@ -39,11 +33,7 @@
   pre_tasks:
     - include: tasks/dockpack.yml
 
-  roles:
-    - geerlingguy.java
-    - ansible-maven
-    - ansible-ant
-    - ansible-eclipse
+  roles: []
 
   tasks:
     - include: tasks/dockpack.yml
