--- a/kickstart/centos-7.1-x86_64-noX.cfg
+++ b/kickstart/centos-7.1-x86_64-noX.cfg
@@ -15,17 +15,19 @@ cdrom
 bootloader --location=mbr
 zerombr
 clearpart --all --initlabel
-part /boot    --size 500      --asprimary
+part /boot    --size 512      --asprimary
+part swap     --fstype swap   --size=1024
 part pv.01    --size 1        --grow
 
 volgroup systemvg pv.01
-logvol swap      --fstype swap 	--name=swaplv     --vgname=systemvg --size=2048
-logvol /tmp      --fstype xfs 	--name=tmplv      --vgname=systemvg --size=2048
-logvol /var      --fstype xfs 	--name=varlv      --vgname=systemvg --size=6144 --grow
-logvol /var/core --fstype xfs 	--name=varcorelv  --vgname=systemvg --size=1024
-logvol /var/log  --fstype xfs	  --name=varloglv   --vgname=systemvg --size=6144
-logvol /home     --fstype xfs 	--name=homelv     --vgname=systemvg --size=10240 --grow
-logvol /         --fstype xfs 	--name=rootlv     --vgname=systemvg --size=10240
+logvol /         --fstype xfs 	--name=rootlv     --vgname=systemvg --size=4096 --grow
+logvol /tmp      --fstype xfs 	--name=tmplv      --vgname=systemvg --size=2048 --fsoptions="nodev,noexec,nosuid"
+logvol /home     --fstype xfs 	--name=homelv     --vgname=systemvg --size=2048 --fsoptions="nodev" --grow
+logvol /var      --fstype xfs 	--name=varlv      --vgname=systemvg --size=6144 --fsoptions="nodev" --grow
+logvol /var/tmp  --fstype xfs 	--name=vartmplv   --vgname=systemvg --size=1024 --fsoptions="nodev,noexec,nosuid"
+logvol /var/log  --fstype xfs	  --name=varloglv   --vgname=systemvg --size=512 --fsoptions="nodev,noexec,nosuid"
+logvol /var/log/audit  --fstype xfs	  --name=audit   --vgname=systemvg --size=256 --fsoptions="nodev,noexec,nosuid"
+
 # Run the Setup Agent on first boot
 firstboot --disable
 
@@ -42,15 +44,32 @@ sudo
 make
 wget
 net-tools
-bzip2
+bind-utils
 yum-utils
 
-# for guest additions, removed later
+# for guest additions
 gcc
 cpp
+bzip2
 libstdc++-devel
 kernel-devel
 kernel-headers
+# for vagrant
+nfs-utils
+nfs-utils-lib
+portmap
+# in cloud
+dwz
+fxload
+gpg-pubkey
+hypervkvpd
+libsysfs
+ntp
+ntpdate
+perl-srpm-macros
+python-pyasn1
+redhat-rpm-config
+zip
 
 ## Remove unnecessary packages
 -gtk2
@@ -60,30 +79,30 @@ kernel-headers
 -avahi-libs
 -avahi-autoipd
 -bitstream-vera-fonts
--iwl6000g2a-firmware
--iwl5000-firmware
--iwl2030-firmware
--iwl3160-firmware
--iwl135-firmware
--alsa-tools-firmware
--iwl6000-firmware
--iwl105-firmware
--ivtv-firmware
--iwl7260
--iwl3945
--iwl100
--iwl1000
--iwl4965
--alsa-firmware
 -aic94xx-firmware
+-alsa-firmware
+-alsa-tools-firmware
+-ivtv-firmware
+-iwl100
 -iwl100-firmware
+-iwl105-firmware
+-iwl135-firmware
+-iwl1000
 -iwl1000-firmware
 -iwl2000-firmware
+-iwl2030-firmware
+-iwl3160-firmware
+-iwl3945
 -iwl3945-firmware
+-iwl4965
 -iwl4965-firmware
+-iwl5000-firmware
 -iwl5150-firmware
+-iwl6000-firmware
+-iwl6000g2a-firmware
 -iwl6000g2b-firmware
 -iwl6050-firmware
+-iwl7260
 -iwl7260-firmware
 -libmpc
 -libsysfs
