--- a/kickstart/centos-7.1-x86_64-noX.cfg
+++ b/kickstart/centos-7.1-x86_64-noX.cfg
@@ -5,14 +5,14 @@ timezone UTC
 
 
 # Authentication
-auth --enableshadow --passalgo=sha512
+auth --enableshadow --passalgo=sha512 --password=vagrant --append="rhgb quiet audit=1"
 rootpw vagrant
 
 # Use CDROM installation media
 cdrom
 
 ## Disk Partitioning
-bootloader --location=mbr
+bootloader --location=mbr --password=vagrant --append="audit=1"
 zerombr
 clearpart --all --initlabel
 part /boot    --size 512      --asprimary
@@ -33,8 +33,8 @@ firstboot --disable
 
 # Network information
 network  --bootproto=dhcp --ipv6=auto --activate --hostname=localhost.localdomain
-firewall --disabled
-selinux --permissive
+firewall --enabled
+selinux --enforcing
 # Reboot the machine after successful installation
 reboot --eject
 
@@ -43,6 +43,7 @@ reboot --eject
 sudo
 make
 wget
+aide
 net-tools
 bind-utils
 yum-utils
@@ -66,9 +67,11 @@ hypervkvpd
 libsysfs
 ntp
 ntpdate
+openswan
 perl-srpm-macros
 python-pyasn1
 redhat-rpm-config
+rsyslog
 zip
 
 ## Remove unnecessary packages
@@ -108,10 +111,47 @@ zip
 -libsysfs
 -mpfr
 -rdma
+-xinetd
+-talk-server
+-irda-utils
+-dovecot
+-squid
+-net-snmp
+-telnet-server
+-rsh-server
+-tftp-server
+-openldap
+-dhcp
+
 %end
 
 %post
+chkconfig rhnsd off
 /usr/bin/yum -y upgrade
+
+# Fix up the partitions to be secure
+# CCE    (rows 15 - 25)
+FSTAB=/etc/fstab
+# nodev, noexec, and nosuid on /boot
+TEST="`grep ' \/boot ' ${FSTAB} | grep -c 'noexec'`"
+if [ "$TEST" = "0" ]; then
+        MNT_OPTS=$(grep " \/boot " ${FSTAB} | awk '{print $4}')
+        sed -i "s/\( \/boot.*${MNT_OPTS}\)/\1,nodev,noexec,nosuid/" ${FSTAB}
+fi
+# nodev, noexec, and nosuid on /dev/shm
+# CCE-15007-8, CCE-14306-5, CCE-14703-3 (Rows 22 - 24)
+TEST="`grep ' \/dev\/shm ' ${FSTAB} | grep -c 'noexec'`"
+if [ "$TEST" = "0" ]; then
+        MNT_OPTS=$(grep " \/dev\/shm " ${FSTAB} | awk '{print $4}')
+        sed -i "s/\( \/dev\/shm.*${MNT_OPTS}\)/\1,nodev,noexec,nosuid/" ${FSTAB}
+fi
+# Make /var/tmp use /tmp
+# CCE-14584-7 (Row 25)
+grep " \/var\/tmp " ${FSTAB} >/dev/null
+if [ $? -eq 1 ]; then
+        echo -e "/tmp\t\t/var/tmp\t\t\text3\tdefaults,bind,nodev,noexec,nosuid\t0 0" >> ${FSTAB}
+fi
+
 package-cleanup --oldkernels --count=1yum in
 sed -i 's/rhgb quiet//' /etc/grub.conf
 # for vagrant halt etc.
