--- a/ansible/inventory/ansible.ini
+++ b/ansible/inventory/ansible.ini
@@ -9,8 +9,8 @@
 [local]
 localhost ansible_connection=local ansible_python_interpreter=python2
 
-[windows]
-windows ansible_connection=winrm ansible_ssh_host=127.0.0.1 ansible_ssh_port=5985  ansible_ssh_user=vagrant
+[modern]
+windows ansible_connection=winrm ansible_ssh_host=127.0.0.1 ansible_port=5985  ansible_user=IEUser ansible_password=Passw0rd!
 
 [centos6]
 centos6 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2201 ansible_ssh_user=vagrant
