--- a/kickstart/centos-7.4-x86_64-noX.cfg
+++ b/kickstart/centos-7.4-x86_64-noX.cfg
@@ -3,9 +3,8 @@ lang en_US.UTF-8
 keyboard --vckeymap=us --xlayouts='us'
 timezone UTC
 
-
 # Authentication
-auth --enableshadow --passalgo=sha512 --password=vagrant --append="rhgb quiet audit=1"
+auth --enableshadow --passalgo=sha512
 rootpw vagrant
 
 # Use CDROM installation media
@@ -43,7 +42,6 @@ reboot --eject
 sudo
 make
 wget
-aide
 net-tools
 bind-utils
 yum-utils
@@ -67,7 +65,6 @@ hypervkvpd
 libsysfs
 ntp
 ntpdate
-openswan
 perl-srpm-macros
 python-pyasn1
 redhat-rpm-config
@@ -75,6 +72,7 @@ rsyslog
 zip
 
 ## Remove unnecessary packages
+-perl
 -gtk2
 -libX11
 -hicolor-icon-theme
