--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,9 @@
 [defaults]
 
+ansible_user = vagrant
+#callback_whitelist = profile_tasks
+deprecation_warnings = False
+inventory = inventory/ansible.ini
 private_key_file = ../pki/vagrant.rsa
-hostfile = inventory/ansible.ini
 retry_files_enabled = False
+#stdout_callback=actionable
