--- a/ansible/inventory/ansible.ini
+++ b/ansible/inventory/ansible.ini
@@ -9,20 +9,18 @@
 [local]
 localhost ansible_connection=local ansible_python_interpreter=python2
 
-[modern]
+[windows_group]
 windows ansible_connection=winrm ansible_ssh_host=127.0.0.1 ansible_port=5985  ansible_user=IEUser ansible_password=Passw0rd!
 
-[centos6]
+[centos7]
 centos6 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2201 ansible_ssh_user=vagrant
+centos7 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2207 ansible_ssh_user=vagrant
 
 [ubuntu]
 ubuntu14 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2202 ansible_ssh_user=vagrant
 
 [fedora]
-fedora22 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2203 ansible_ssh_user=vagrant
+fedora ansible_ssh_host=127.0.0.1 ansible_ssh_port=2203 ansible_ssh_user=vagrant
 
-[coreos]
+[coreos_group]
 coreos ansible_ssh_host=127.0.0.1 ansible_ssh_port=2204 ansible_ssh_user=core
-
-[centos7]
-centos7 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2207 ansible_ssh_user=vagrant
