--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,9 +1,9 @@
 [defaults]
 
 ansible_user = vagrant
+host_key_checking = False
 #callback_whitelist = profile_tasks
 deprecation_warnings = False
 inventory = inventory/ansible.ini
-private_key_file = ../pki/vagrant.rsa
 retry_files_enabled = False
 #stdout_callback=actionable
