--- a/ansible/inventory/ansible.ini
+++ b/ansible/inventory/ansible.ini
@@ -13,8 +13,16 @@ localhost ansible_connection=local ansible_python_interpreter=python2
 windows ansible_connection=winrm ansible_ssh_host=127.0.0.1 ansible_port=5985  ansible_user=IEUser ansible_password=Passw0rd!
 
 [centos7]
-centos6 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2201 ansible_ssh_user=vagrant
-centos7 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2207 ansible_ssh_user=vagrant
+centos6 ansible_ssh_port=2201
+centos7 ansible_ssh_port=2207
+[centos7:vars]
+ansible_ssh_host=127.0.0.1
+ansible_ssh_user=vagrant
+ansible_ssh_private_key_file=~/.vagrant.d/insecure_private_key
+
+
+[docker]
+atomic ansible_ssh_host=127.0.0.1 ansible_ssh_port=2208 ansible_ssh_user=vagrant
 
 [ubuntu]
 ubuntu14 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2202 ansible_ssh_user=vagrant
