wasilak.centos-kernel is idempotent

--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -7,6 +7,13 @@
 
   roles:
     - loghost
+    - wasilak.centos-kernel
+
+- hosts: cloud
+  become: yes
+
+  roles:
+    - cis_audit
 
 ### centos6
 - hosts: centos6
