--- a/kickstart/centos-6.10-x86_64-noX.cfg
+++ b/kickstart/centos-6.10-x86_64-noX.cfg
@@ -42,112 +42,42 @@ selinux --permissive
 repo --name=epel --mirrorlist=https://mirrors.fedoraproject.org/metalink?repo=epel-6&arch=x86_64 --includepkgs='dkms,tmux'
 repo --name=updates --baseurl=https://www.mirrorservice.org/sites/mirror.centos.org/6/updates/x86_64/
 
-%packages --ignoremissing
-@Base
 @Core
-wget
-curl
-sudo
-vim
-gcc
-gcc-c++
-make
-dkms
-tmux
-kernel-devel
-kernel-headers
-
-## Add extra packages
+acpid
+libselinux-python
+libsemanage-python
 openssh-clients
-fprintd-pam
-gnutls
-bzip2
-p7zip
-git
-rsync
-screen
-xfsprogs
+python-httplib2
+sudo
+make
+wget
 
 ## Remove unnecessary packages
--abrt
+-avahi
+-avahi-libs
+-avahi-autoipd
+-audit
+-bitstream-vera-fonts
 -aic94xx-firmware
--alsa-utils
--atmel-firmware
--b43-openfwwf
--b43-fwcutter
--bfa-firmware
--biosdevname
--bind-utils
--bind-libs
--blktrace
--bridge-utils
--busybox
--centos-indexhtml
--cloog-ppl
--cpuspeed
--cyrus-sasl-plain
--desktop-file-utils
--dmraid
--dosfstools
--ed
--eject
--gdb
--gdk-pixbuf2
--gpm-libs
--hdparm
--ipw*-firmware
--irqbalance
+-alsa-firmware
+-alsa-tools-firmware
 -ivtv-firmware
--iw
+-iwl100
 -iwl*-firmware
--ledmon
--libertas-usb8388-firmware
--libgomp
--lsof
--mdadm
--microcode_ctl
--mlocate
--mtr
--nano
--ntsysv
--parted
--pcmciautils
--pciutils
--pinfo
--ppl
--python-iwlib
--ql*-firmware
--rdate
--rfkill
--rng-tools
--rt61pci-firmware
--rt73usb-firmware
--scl-utils
--setserial
--sg3_utils-libs
--sgpio
--smartmontools
--snappy
--strace
--systemtap-runtime
--tcpdump
--tcsh
--tmpwatch
--traceroute
--usbutils
--usermode
--vconfig
--wireless-tools
--words
--xdg-utils
--xorg-x11-drv-ati-firmware
--zd1211-firmware
+-iwl1000
+-iwl3945
+-iwl4965
+-iwl7260
+-libmpc
+-libsysfs
+-mpfr
+-rdma
 %end
 
 %post
 /usr/bin/yum -y upgrade
-
-
+package-cleanup --oldkernels --count=1yum in
+sed -i 's/rhgb quiet//' /etc/grub.conf
 # CCE-4167-3 (row 127)
 # This is being set to off because IPv6 is disabled
 chkconfig ip6tables off
